--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home"></activity>
+        <activity android:name=".Vendor"></activity>
+        <activity android:name=".Home" />
         <activity android:name=".Detail" />
         <activity android:name=".ContactUs" />
         <activity android:name=".Review" />
