--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
         customDebugType {
             debuggable true
         }
+
     }
 }
 
@@ -43,4 +44,9 @@ dependencies {
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+
+    //TodoAnko
+    implementation "org.jetbrains.anko:anko-sdk15:0.10.4"
+    implementation "org.jetbrains.anko:anko-commons:0.10.4"
+    implementation 'com.google.android.material:material:1.0.0'
 }
