--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dilla.printster">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ProfileScreenActivity"></activity>
-        <activity android:name=".FirstActivity">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditProfileActivity"/>
+        <activity android:name=".NavigationBar" />
+        <activity android:name=".Vendor" />
+        <activity android:name=".Home" />
+        <activity android:name=".Detail" />
+        <activity android:name=".ContactUs" />
+        <activity android:name=".Review" />
+        <activity android:name=".History" />
+        <activity android:name=".Payment" />
+        <activity android:name=".ChooseVendor" />
+        <activity android:name=".PaymentMethod" />
+        <activity android:name=".FinishDesign" />
+        <activity android:name=".Size" />
+        <activity android:name=".backDesign" />
+        <activity android:name=".FrontDesign" />
+        <activity android:name=".ProfileScreenActivity" />
+        <activity android:name=".FirstActivity"/>
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LoginActivity" />
     </application>
